--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 <blockquote style="text-align: justify;"><b>با توجه به اینکه دانشگاه پیام نور دارای امکاناتی از جمله دوره های مجازی برای افرادی است که شرایط شرکت در کلاسها بصورت حضوری را ندارند و از طرفی نسبت به سایر دانشگاهها ، هزینه تحصیل کمتر می باشد ، این دانشگاه را انتخاب نمودم .
 	</b></blockquote>
 
+<blockquote style="text-align: justify;"><b>در حال حاضر بعد از اتمام تحصیل در مقطع ارشد ترجیح میدهم از مطالبی که در دوره ارشد فرا گرفتم در ارائه کار اصولی تر در حوزه برنامه نویسی و بویژه طراحی استفاده کنم و تصمیم برای ادامه تحصیل درمقطع دکتری ندارم .
+	</b></blockquote>
+
+<blockquote style="text-align: justify;"><b>به جز رشته نرم افزار به فیزیک  و نجوم هم علاقمند هستم . از جمله تفریحاتم گوش دادن به کتاب صوتی ، تماشا کردن فیلم  ، کسب اطلاعات در حوزه های مورد علاقه ام در فضای مجازی  را می توانم نام ببرم.	</b></blockquote>
+
     </div>
      
   </body>
